Fix CheckStyle